# trajectory_planning

./: CMakeLists.txt  README.md  dconfig
documentation/html/: annotated.html  classPolynomial-members.html  classPolynomial.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  main_8cpp.html  main_8cpp_source.html  md_README.html  pages.html  polynomial_8cpp_source.html  polynomial_8h_source.html  structJointTrajectoryConstraints-members.html  structJointTrajectoryConstraints.html  structtest__case-members.html  structtest__case.html
documentation/html/search/: all_4.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
documentation/latex/: annotated.tex  classPolynomial.tex  files.tex  main_8cpp.tex  main_8cpp_source.tex  md_README.tex  polynomial_8cpp_source.tex  polynomial_8h_source.tex  refman.tex  structJointTrajectoryConstraints.tex  structtest__case.tex
include/: polynomial.h
matplotlibCpp/: CMakeLists.txt
src/: main.cpp  polynomial.cpp
visulization/: CMakeLists.txt
visulization/src/: main.cpp
